# react-django-postgres-example

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/apps/user/: serializers.py  urls.py  views.py
backend/apps/user/migrations/: 0001_initial.py
backend/command/management/commands/: createapp.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  main.jsx  store.js
frontend/src/api/: baseApi.js  baseQuery.js
frontend/src/features/user/: authUtils.js  userApi.js
frontend/src/hooks/: index.js  useTokenCheckTimer.js
frontend/src/utils/: string.js
nginx/: default.conf  entrypoint.sh
